added google font, grid to footer, flex to nav and headeader, linked about and portfolio pages, added contact links

--- a/index.html
+++ b/index.html
@@ -3,34 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>Kiera Thomasson</title>
-    <link href="../styles/style.css" rel="stylesheet" >
+    <link href="styles/style.css" rel="stylesheet" >
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light');
+</style>
   </head>
   <body>
 
-    <header>
+    <div class="container">
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Portfolio</li>
+          <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
+          </li>
+          <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About</a>
+          </li>
+          <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
+          </li>
         </ul>
       </nav>
 
-    </header>
-    <main>
-      <h1> Kiera Thomasson
-       </h1>
+      <main>
+        <section class="header">
+          <h1> Kiera Thomasson</h1>
+          <p>(she/her)</p>
+          <h2>A music loving foodie soon to be dev</h2>
+          <h3> 🚧 Dev currently under construction 🚧 </h3>
+        </section>
 
+      </main>
 
+      <footer>
+        <ul>
+          <!-- <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About</a>
+          </li>
+          <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
+          </li> -->
+          <li>
+            Contact Me!
+            <a href=https://twitter.com/k33rashaune> Twitter</a>
+            <a href="mailto:kiera.thomasson@gmail.com">Email</a>
+          </li>
+          <li>
+            © 2018 Kiera Thomasson
+          </li>
+        </ul>
+      </footer>
+    </div>
 
-    </main>
-
-    <footer>
-      <ul>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
-      </ul>
-    </footer>
   </body>
 </html>
