--- a/content/about.html
+++ b/content/about.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="../styles/style.css" rel="stylesheet" >
-    <link href="../styles/about.css" rel="stylesheet" >
+    <link href="styles/style.css" rel="stylesheet" >
+    <link href="styles/about.css" rel="stylesheet" >
   </head>
   <body>
     <header>
