--- a/content/portfolio.html
+++ b/content/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="../styles/style.css" rel="stylesheet">
-    <link href="../styles/portfolio.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/portfolio.css" rel="stylesheet">
   </head>
   <body>
     <header>
