basic content on about page

--- a/content/about.html
+++ b/content/about.html
@@ -3,23 +3,65 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="styles/style.css" rel="stylesheet" >
-    <link href="styles/about.css" rel="stylesheet" >
+    <link href="../styles/about.css" rel="stylesheet">
+    <link       href="../styles/style.css" rel="stylesheet">
+
+
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light');
+    </style>
+
   </head>
   <body>
-    <header>
-      <nav>
-      </nav>
 
-    </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
+        </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
+        </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
+        </li>
+      </ul>
+    </nav>
+
     <main>
+      <section class="header">
+        <h1>About Me!</h1>
+        <p>My life wouldn’t be the same without music!</p>
 
+        </p>Favs: trying new foods/restaurants, binging crime shows, watching sports movies, and HGTV.</p>
 
+        <p>Love: going to concerts,tropical beaches, and spending time with my nieces and nephews.</p>
+
+        <p>Cool fact: I won the car I currently drive.</p>
+      </section>
+      <section>
+        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+      </section>
 
     </main>
 
     <footer>
+      <ul>
+        <li>
+          Contact Me!
+          <a href=https://twitter.com/k33rashaune>Twitter</a>
+          <a href="mailto:kiera.thomasson@gmail.com">Email</a>
+        </li>
+        <li>
+          © 2018 Kiera Thomasson
+        </li>
+      </ul>
     </footer>
+
 
   </body>
 </html>
