--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="styles/style.css" rel="stylesheet" >
     <style>
       @import url('https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light');
-</style>
+    </style>
   </head>
   <body>
 
@@ -17,7 +17,7 @@
             <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
           </li>
           <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About</a>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
           </li>
           <li>
             <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
@@ -45,7 +45,7 @@
           </li> -->
           <li>
             Contact Me!
-            <a href=https://twitter.com/k33rashaune> Twitter</a>
+            <a href=https://twitter.com/k33rashaune>Twitter</a>
             <a href="mailto:kiera.thomasson@gmail.com">Email</a>
           </li>
           <li>
