added content and more styling to about page

--- a/content/about.html
+++ b/content/about.html
@@ -29,22 +29,29 @@
     </nav>
 
     <main>
+      <header class="hero-image">
+        <img src="../images/stephan-jola-3332-unsplash.jpg" alt="space needle" style="width:100%;">
+
+        <section class="top-left">
+          <h1>About Me!</h1>
+          <h3>Food</h3>
+          <h3>Music</h3>
+        </section>
+      </header>
       <section class="header">
-        <h1>About Me!</h1>
+        <h1>At a glance</h1>
+        <p>Born and raised in Seattle, WA</p>
+
         <p>My life wouldn’t be the same without music!</p>
 
         </p>Favs: trying new foods/restaurants, binging crime shows, watching sports movies, and HGTV.</p>
 
-        <p>Love: going to concerts,tropical beaches, and spending time with my nieces and nephews.</p>
+        <p>Love: going to concerts, tropical beaches, and spending time with my nieces and nephews.</p>
 
         <p>Cool fact: I won the car I currently drive.</p>
-      </section>
-      <section>
-        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
-        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
-        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
-        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
-        <p> alksdjflasdjflaskjdflkajsdlfkjsl;akdfj;lksdlfsd;lfkjsdlkjf;lskdjl;fkajsd;lfkjasl;dkflksajd;lfkjsad;lkrnjl al</p>
+
+        <p> I am very passionate about living a positive healthy life</p>
+        <p> I am also very passionate about giving back to my community</p>
       </section>
 
     </main>
