ran completed pages through validator html and css. addadded a new page for code journal. updated nav bar for all pages.

--- a/content/about.html
+++ b/content/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kiera Thomasson</title>
     <link href="../styles/style.css" rel="stylesheet">
     <link href="../styles/about.css" rel="stylesheet">
 
@@ -27,6 +27,9 @@
           <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
           <!-- https://krashaune.github.io/personal-portfolio-site/ -->
         </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/code-journal.html">Journal</a>
+        </li>
       </ul>
     </nav>
 
@@ -43,11 +46,11 @@
       <section class="header">
         <h1>At a glance</h1>
         <p>I was born and raised in Seattle, WA. Attended Washington State University and received a BA in Human Development.</p>
-        <p> Before starting at Ada Developers Academy, I worked at Treehouse, a Seattle non-profit for 5 and a half years. Throughout my various positions at Treehouse data and tech were always of interest. My last position was Systems Analyst working along side the database administrator improving the database and managing data quality.</p> 
+        <p> Before starting at Ada Developers Academy, I worked at Treehouse, a Seattle non-profit for 5 and a half years. Throughout my various positions at Treehouse data and tech were always of interest. My last position was Systems Analyst working along side the database administrator improving the database and managing data quality.</p>
 
         <p>My life wouldn’t be the same without music!</p>
 
-        </p>Favs: trying new foods/restaurants, binging crime shows, watching sports movies, and HGTV.</p>
+        <p>Favs: trying new foods/restaurants, binging crime shows, watching sports movies, and HGTV.</p>
 
         <p>Love: going to concerts, tropical beaches, and spending time with my nieces and nephews.</p>
 
@@ -65,6 +68,7 @@
           Contact Me!
           <a href=https://twitter.com/k33rashaune>Twitter</a>
           <a href="mailto:kiera.thomasson@gmail.com">Email</a>
+          <a href="https://github.com/Krashaune">GitHub</a>
         </li>
         <li>
           © 2018 Kiera Thomasson
