--- a/content/portfolio.html
+++ b/content/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kiera Thomasson</title>
     <link href="../styles/style.css" rel="stylesheet">
     <link href="../styles/portfolio.css" rel="stylesheet">
 
@@ -11,33 +11,38 @@
     </style>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
-          </li>
-          <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
-          </li>
-          <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
-          </li>
-        </ul>
-      </nav>
 
-    </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
+          <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+        </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
+          <!-- https://krashaune.github.io/personal-portfolio-site/about -->
+        </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
+          <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+        </li>
+        <li>
+          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/code-journal.html">Journal</a>
+        </li>
+      </ul>
+    </nav>
+
+
     <main>
-      <section class="tech">
-        <img src="https://picsum.photos/850/600?image=0">
-        <section class="overlay">
-          <h1> Tech Portfolio</h1>
-          <p> The portfolio consists of <strong>most</strong> of the work  completed thus far while attending Ada Developers Academy.</p>
+      <header>
+        <section class="tech">
+          <img src="../images/laptop.jpg" alt="laptop">
+          <section class="overlay">
+            <h1> Tech Portfolio</h1>
+            <p> The portfolio consists of <strong>most</strong> of the work  completed thus far while attending Ada Developers Academy.</p>
+          </section>
         </section>
-      </section>
+      </header>
 
       <div class="projects">
         <section>
@@ -90,6 +95,7 @@
           Contact Me!
           <a href=https://twitter.com/k33rashaune>Twitter</a>
           <a href="mailto:kiera.thomasson@gmail.com">Email</a>
+          <a href="https://github.com/Krashaune">GitHub</a>
         </li>
         <li>
           © 2018 Kiera Thomasson
