--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
           </li>
           <li>
             <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+            <!-- https://krashaune.github.io/personal-portfolio-site/content/about -->
           </li>
           <li>
             <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+            <!-- https://krashaune.github.io/personal-portfolio-site/content/portfolio -->
+          </li>
+          <li>
+            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/code-journal.html">Journal</a>
           </li>
         </ul>
       </nav>
@@ -35,7 +38,6 @@
           <h2>A music loving foodie soon to be dev</h2>
           <h3> 🚧 Dev currently under construction 🚧 </h3>
         </section>
-
       </main>
 
       <footer>
@@ -50,6 +52,7 @@
             Contact Me!
             <a href=https://twitter.com/k33rashaune>Twitter</a>
             <a href="mailto:kiera.thomasson@gmail.com">Email</a>
+            <a href="https://github.com/Krashaune">GitHub</a>
           </li>
           <li>
             © 2018 Kiera Thomasson
