added content to the code journal page, updated about mt me

--- a/content/about.html
+++ b/content/about.html
@@ -46,18 +46,47 @@
       <section class="header">
         <h1>At a glance</h1>
         <p>I was born and raised in Seattle, WA. Attended Washington State University and received a BA in Human Development.</p>
-        <p> Before starting at Ada Developers Academy, I worked at Treehouse, a Seattle non-profit for 5 and a half years. Throughout my various positions at Treehouse data and tech were always of interest. My last position was Systems Analyst working along side the database administrator improving the database and managing data quality.</p>
+        <p> Before starting at Ada Developers Academy, I worked at Treehouse, a Seattle non-profit for 5 and a half years. Throughout my various positions at Treehouse data and tech were always of interest. My last position was a Systems Analyst few job duties were working along side the database administrator improving the database and managing data quality.</p>
 
-        <p>My life wouldn’t be the same without music!</p>
+        <span>My life would not be fulfilled without music!</span>
 
-        <p>Favs: trying new foods/restaurants, binging crime shows, watching sports movies, and HGTV.</p>
+        <section class="details">
+          <ul class="fav">
+            <li>
+              <h2>Favorite things to do</h2>
+            </li>
+            <li>
+              Try new foods/restaurants
+            </li>
+              Binge crime shows, sports and action movies
+            <li>
+              Watch HGTV and dream up my tiny house<
+            </li>
+          </ul>
 
-        <p>Love: going to concerts, tropical beaches, and spending time with my nieces and nephews.</p>
+          <ul class="love">
+            <li>
+              <h2>Things I Love</h2>
+            </li>
+              Attend concerts
+            <li>
+              Vacation on tropical beaches
+            </li>
+            <li>
+              Swim in the ocean
+            </li>
+            <li>
+              Spend time with my nieces and nephews
+            </li>
+          </ul>
 
-        <p>Cool fact: I won the car I currently drive.</p>
 
-        <p> I am very passionate about living a positive healthy life</p>
-        <p> I am also very passionate about giving back to my community</p>
+          <span> I am also very passionate about giving back to my community</span>
+
+
+          <span>Random Cool fact: I won the car I currently drive.</span>
+
+        </section>
       </section>
 
     </main>
