--- a/content/code-journal.html
+++ b/content/code-journal.html
@@ -31,12 +31,99 @@
     </nav>
     <main>
       <section class="intro">
-        <h1> Welcome to a semi-Descriptive Detail of my Developer Journey</h1>
+        <!-- <aside>
+          <p> Weeks Learning</p>
+          <p>6</p>
+        </aside> -->
+        <h1> Hey There!  </h1>
+        <p>Welcome to the roller coaster ride of my Developer Journey</p>
+        <p><strong>unedited</strong>, please have grace</p>
       </section>
+
+      <div class="entries">
+        <section>
+          <h2>Month[0] Learnings</h2>
+          <ul>
+            <li>
+              <p>It is really hard to believe that I have only been attending Ada for roughly a month. The biggest learning during this time was about myself. I think I learned more about myself than I did programming concepts. Please do not tell Dan! I honestly think it is true. I attended college and even have a masters but, neither of those experiences prepared me for Ada. There is so much material to learn in such little time.</p>
+
+              <p><strong>What I learned about myself</strong></p>
+
+              <p>I learned how I deal with stress (intense stress). I learned that the type of learner I thought I was was very inaccurate. I also learned that I have a lot of pride in knowing things and when I do not know something it is really hard for me to admit it to myself and ask for help without feeling ashamed that I should know it. I learned a whole lot more about myself but, there is no time to go into all the details.</p>
+
+              <p><strong>A few things that have occured during these past few weeks.</strong></p>
+
+              <p>I have lost track of the days and sometime the month.</p>
+
+              <p>I only manage to work out one day a week</p>
+
+              <p>Coffee does not keep me up during long lectures</p>
+
+              <p>Refocusing is only successful with meditation</p>
+
+              <p>When I have the urge to cry just let it out because holding it in only makes you feel worst</p>
+            </li>
+            <li>
+
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h2>Self-care</h2>
+          <ul>
+            <li>
+              <strong>What is self care?</strong>
+            </li>
+            <li>
+              <p>So many people say self care if important, make sure you are taking care of yourself. However, self care can literally be anything. Which makes it really hard for me to find it, define it any actually do it.</p>
+
+              <p>I have said week after week I am going to do some self care on Thursdays when we have early release. But, all I have done so far is stay working on things, or going home to go to sleep.</p>
+
+              <p>Sleep is officially my self care I'd love to get a massage, or go to a spa get in a jaccuzi but, the work it takes to find those places and actually pay for them is too much.</p>
+
+              <p><strong> I will stick with extra sleep for the following reasons</strong></p>
+              <p> I can never get enough sleep<p>
+              <p>Most days I am up after midnight</p>
+              <p>sleep is good for my brain</p>
+              <p>I am a nicer person with sleep</p>
+              <p>If I have enough sleep I do not need coffee</p>
+              <p> Everything costs money! Sleep is free and can essentially be done anywhere</p>
+
+            </li>
+          </ul>
+        </section>
+        <section class="music">
+          <h2>Music on Repeat</h2>
+          <ul>
+            <li>
+              <p>If you've read the about me page then you already know I love music!</p>
+
+              <p> The reason I love music so much is because there are so many genres, artists, beats etc. no matter how you are feeling <strong>excited  sad  angry frustrated</strong> etc. I guarantee there is a song that will either help you sulk if that's what your into or make you feel better</p>
+
+              <p>Depending on the day I need different music to either keep me focused, encouraged, relaxed, or hyped.</p>
+
+              <p>Below is some of the music that I've <strong> had on repeat </strong>the past few weeks</p>
+
+              <p>Classical playlist</p>
+              <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1DWSluGMsH1R9r?si=iatH4qdxQy-f_7U32ewxDA"><img src="../images/perfect-concentration.jpg" alt="spotify playlist">
+
+              <p>Janelle Monae - Make Me Feel</p>
+              <a href="https://open.spotify.com/track/79GsUxLyzxgnN4I1E11dtO?si=F4j_dnY0QmWGPOR5lrBGmQ"><img src="../images/make-me-feel.jpg" alt="spotify song">
+
+              <p>Ella Mai - Naked</p>
+              <a href="https://open.spotify.com/track/4E3FwGMzfnpG5TScXYUiaZ?si=uYUAX5BoRPWir6n-sU44zg"><img src="../images/naked.jpg" alt="spotify song">
+
+              <p>Nipsey Hussle - Victory Lap</p>
+              <a href="https://open.spotify.com/album/6rcbbhcm8Os7EiVRHP9Aef?si=MEz6epK3SRyPnzswah1qug"><img src="../images/victory-lap.jpg" alt="spotify album">
+            </li>
+          </ul>
+        </section>
+      </div>
 
       <section>
       </section>
     </main>
+
     <footer>
       <ul>
         <li>
