changes made to file from validator

--- a/content/about.html
+++ b/content/about.html
@@ -58,9 +58,11 @@
             <li>
               Try new foods/restaurants
             </li>
-              Binge crime shows, sports and action movies
             <li>
-              Watch HGTV and dream up my tiny house<
+              Binge crime shows sports and action movies
+            </li>
+            <li>
+              Watch HGTV and dream up my tiny house
             </li>
           </ul>
 
@@ -68,7 +70,9 @@
             <li>
               <h2>Things I Love</h2>
             </li>
+            <li>
               Attend concerts
+            </li>
             <li>
               Vacation on tropical beaches
             </li>
