--- a/content/code-journal.html
+++ b/content/code-journal.html
@@ -105,23 +105,21 @@
               <p>Below is some of the music that I've <strong> had on repeat </strong>the past few weeks</p>
 
               <p>Classical playlist</p>
-              <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1DWSluGMsH1R9r?si=iatH4qdxQy-f_7U32ewxDA"><img src="../images/perfect-concentration.jpg" alt="spotify playlist">
+              <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1DWSluGMsH1R9r?si=iatH4qdxQy-f_7U32ewxDA"><img src="../images/perfect-concentration.jpg" alt="spotify playlist"></a>
 
               <p>Janelle Monae - Make Me Feel</p>
-              <a href="https://open.spotify.com/track/79GsUxLyzxgnN4I1E11dtO?si=F4j_dnY0QmWGPOR5lrBGmQ"><img src="../images/make-me-feel.jpg" alt="spotify song">
+              <a href="https://open.spotify.com/track/79GsUxLyzxgnN4I1E11dtO?si=F4j_dnY0QmWGPOR5lrBGmQ"><img src="../images/make-me-feel.jpg" alt="spotify song"></a>
 
               <p>Ella Mai - Naked</p>
-              <a href="https://open.spotify.com/track/4E3FwGMzfnpG5TScXYUiaZ?si=uYUAX5BoRPWir6n-sU44zg"><img src="../images/naked.jpg" alt="spotify song">
+              <a href="https://open.spotify.com/track/4E3FwGMzfnpG5TScXYUiaZ?si=uYUAX5BoRPWir6n-sU44zg"><img src="../images/naked.jpg" alt="spotify song"></a>
 
               <p>Nipsey Hussle - Victory Lap</p>
-              <a href="https://open.spotify.com/album/6rcbbhcm8Os7EiVRHP9Aef?si=MEz6epK3SRyPnzswah1qug"><img src="../images/victory-lap.jpg" alt="spotify album">
+              <a href="https://open.spotify.com/album/6rcbbhcm8Os7EiVRHP9Aef?si=MEz6epK3SRyPnzswah1qug"><img src="../images/victory-lap.jpg" alt="spotify album"></a>
             </li>
           </ul>
         </section>
       </div>
-
-      <section>
-      </section>
+      
     </main>
 
     <footer>
