--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
       <nav>
         <ul>
           <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+            <a href="https://krashaune.github.io/personal-portfolio-site/">Home</a>
+            
           </li>
           <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/content/about -->
+            <a href="https://krashaune.github.io/personal-portfolio-site/content/about">About Me</a>
+            
           </li>
           <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
-            <!-- https://krashaune.github.io/personal-portfolio-site/content/portfolio -->
+            <a href="https://krashaune.github.io/personal-portfolio-site/content/portfolio">Portfolio</a>
+            <!--  -->
           </li>
           <li>
-            <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/code-journal.html">Journal</a>
+            <a href="https://krashaune.github.io/personal-portfolio-site/content/code-journal">Journal</a>
           </li>
         </ul>
       </nav>
