tried again to update the navbar links

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
       <nav>
         <ul>
           <li>
-            <a href="https://krashaune.github.io/personal-portfolio-site/">Home</a>
-            
+            <a href="http://krashaune.github.io/personal-portfolio-site/">Home</a>
+
           </li>
           <li>
-            <a href="https://krashaune.github.io/personal-portfolio-site/content/about">About Me</a>
-            
+            <a href="http://krashaune.github.io/personal-portfolio-site/content/about">About Me</a>
+
           </li>
           <li>
-            <a href="https://krashaune.github.io/personal-portfolio-site/content/portfolio">Portfolio</a>
+            <a href="http://krashaune.github.io/personal-portfolio-site/content/portfolio">Portfolio</a>
             <!--  -->
           </li>
           <li>
-            <a href="https://krashaune.github.io/personal-portfolio-site/content/code-journal">Journal</a>
+            <a href="http://krashaune.github.io/personal-portfolio-site/content/code-journal">Journal</a>
           </li>
         </ul>
       </nav>
