--- a/content/code-journal.html
+++ b/content/code-journal.html
@@ -13,19 +13,19 @@
     <nav>
       <ul>
         <li>
-          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/index.html">Home</a>
-          <!-- https://krashaune.github.io/personal-portfolio-site/ -->
+          <a href="http://krashaune.github.io/personal-portfolio-site/">Home</a>
+
         </li>
         <li>
-          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/about.html">About Me</a>
-          <!-- https://krashaune.github.io/personal-portfolio-site/content/about -->
+          <a href="http://krashaune.github.io/personal-portfolio-site/content/about">About Me</a>
+
         </li>
         <li>
-          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/portfolio.html">Portfolio</a>
-          <!-- https://krashaune.github.io/personal-portfolio-site/content/portfolio -->
+          <a href="http://krashaune.github.io/personal-portfolio-site/content/portfolio">Portfolio</a>
+
         </li>
         <li>
-          <a href="file:///Users/kierathomasson/ada/week6/personal-portfolio-site/content/code-journal.html">Journal</a>
+          <a href="http://krashaune.github.io/personal-portfolio-site/content/code-journal">Journal</a>
         </li>
       </ul>
     </nav>
@@ -119,7 +119,7 @@
           </ul>
         </section>
       </div>
-      
+
     </main>
 
     <footer>
